crates/fig-parser/tests/snapshots/integration_tests__expressions__parenthesized.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: paren_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
          - name: c
            ty: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Parenthesized:
                      BinaryOp:
                        lhs:
                          IntegerLiteral:
                            base: Decimal
                            digits: "1"
                            suffix: ~
                        op: Add
                        rhs:
                          IntegerLiteral:
                            base: Decimal
                            digits: "2"
                            suffix: ~
                  op: Multiply
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "3"
                      suffix: ~
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Parenthesized:
                      BinaryOp:
                        lhs:
                          Path:
                            segments:
                              - a
                        op: Add
                        rhs:
                          Path:
                            segments:
                              - b
                  op: Multiply
                  rhs:
                    Parenthesized:
                      BinaryOp:
                        lhs:
                          Path:
                            segments:
                              - a
                        op: Subtract
                        rhs:
                          Path:
                            segments:
                              - b
          - Let:
              annotations: []
              name: c
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Parenthesized:
                      BinaryOp:
                        lhs:
                          Parenthesized:
                            BinaryOp:
                              lhs:
                                Path:
                                  segments:
                                    - a
                              op: Add
                              rhs:
                                Path:
                                  segments:
                                    - b
                        op: Multiply
                        rhs:
                          Path:
                            segments:
                              - c
                  op: Subtract
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "1"
                      suffix: ~
          - Pass
