crates/fig-parser/tests/snapshots/integration_tests__expressions__sizeof_alignof_offsetof.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Foo
      generic_params: []
      requires: []
      fields:
        - name: a
          ty: U8
          visibility: Default
          annotations: []
        - name: b
          ty: U32
          visibility: Default
          annotations: []
        - name: c
          ty: U64
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: size_exprs
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: sz
              ty: ~
              value:
                Sizeof:
                  Path:
                    path:
                      segments:
                        - Foo
                    generic_args: []
          - Let:
              annotations: []
              name: al
              ty: ~
              value:
                Alignof:
                  Path:
                    path:
                      segments:
                        - Foo
                    generic_args: []
          - Let:
              annotations: []
              name: "off"
              ty: ~
              value:
                Offsetof:
                  ty:
                    Path:
                      path:
                        segments:
                          - Foo
                      generic_args: []
                  field: b
          - Let:
              annotations: []
              name: sz2
              ty: ~
              value:
                Sizeof: U64
          - Let:
              annotations: []
              name: al2
              ty: ~
              value:
                Alignof:
                  Pointer:
                    nullable: false
                    mutable: true
                    element_type: U8
          - Pass
