crates/fig-parser/tests/snapshots/integration_tests__expressions__unary.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: unary_ops
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: Bool
          - name: p
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: I32
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: neg
              ty: ~
              value:
                UnaryOp:
                  op: Negate
                  operand:
                    Path:
                      segments:
                        - a
          - Let:
              annotations: []
              name: pos
              ty: ~
              value:
                UnaryOp:
                  op: Plus
                  operand:
                    Path:
                      segments:
                        - a
          - Let:
              annotations: []
              name: bne
              ty: ~
              value:
                UnaryOp:
                  op: BitwiseNot
                  operand:
                    Path:
                      segments:
                        - a
          - Let:
              annotations: []
              name: not
              ty: ~
              value:
                UnaryOp:
                  op: LogicalNot
                  operand:
                    Path:
                      segments:
                        - b
          - Let:
              annotations: []
              name: deref
              ty: ~
              value:
                UnaryOp:
                  op: Dereference
                  operand:
                    Path:
                      segments:
                        - p
          - Let:
              annotations: []
              name: addr
              ty: ~
              value:
                UnaryOp:
                  op: AddressOf
                  operand:
                    Path:
                      segments:
                        - a
          - Pass
